# gryffin

./: pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  continuous-integration.yml  python-publish.yml
src/gryffin/: cli.py  gryffin.py
src/gryffin/acquisition/: acquisition.py
src/gryffin/acquisition/genetic_optimizer/: genetic_optimizer.py
src/gryffin/acquisition/gradient_optimizer/: adam_optimizer.py  gradient_optimizer.py  naive_categorical_optimizer.py
src/gryffin/bayesian_network/: bayesian_network.py  category_reshaper.py
src/gryffin/bayesian_network/torch_interface/: bnn.py  numpy_graph.py
src/gryffin/benchmark_functions/: benchmark_functions_cat.py  benchmark_functions_cont.py
src/gryffin/database_handler/: database_handler.py  db_werkzeug.py
src/gryffin/database_handler/json_writers/: db_writer.py
src/gryffin/database_handler/pandas_writers/: db_writer.py
src/gryffin/database_handler/sqlite_interface/: sqlite_database.py  sqlite_interface.py  sqlite_operations.py
src/gryffin/descriptor_generator/: descriptor_generator.py  generator.py
src/gryffin/observation_processor/: observation_processor.py
src/gryffin/sample_selector/: __BACKUP_sample_selector.py  sample_selector.py
src/gryffin/utilities/: category_parser.py  config_parser.py  infos.py  json_parser.py  logger.py  pickle_parser.py
tests/: test_mixed.py
