[build-system]
requires = ["oldest-supported-numpy", "setuptools", "wheel", "cython"]

[tool.cibuildwheel]
before-build = "pip install numpy cython && python setup.py prepare"
# Skip PyPy MacOS MUSL linux and linux 32 bit
build = ["cp310-win_amd64"]
#skip = ["pp*", "*-macosx", "*-musllinux", "manylinux_i686", ]
